--- a/Average/src/app/home/home.page.html
+++ b/Average/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="contentMain">
-    <h1>Leitor de temperaturas</h1>
+    <h1>Calculador de média</h1>
     <input [(ngModel)]="inputGradeOne" type="number" placeholder="Primeira nota">
     <input [(ngModel)]="inputGradeTwo" type="number" placeholder="Segunda nota">
     <input [(ngModel)]="inputGradeThree" type="number" placeholder="Terceira nota">
