--- a/Temperature/src/app/home/home.page.html
+++ b/Temperature/src/app/home/home.page.html
@@ -6,7 +6,7 @@
       <option value="Fahrenheit">Fahrenheit</option>
       <option value="Celsius">Celsius</option>
     </select>
-    <button (click)="calcularTemperature()">Calcular</button>
+    <button (click)="calcTemperature()">Calcular</button>
     <label>{{resTemperature}}</label>
   </div>
 </ion-content>
