--- a/Triangle/src/app/home/home.page.html
+++ b/Triangle/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="contentMain">
-    <h1>Leitor de temperaturas</h1>
+    <h1>Teste de triângulo</h1>
     <input [(ngModel)]="inputSideA" type="number" placeholder="Lado 1 do triângulo">
     <input [(ngModel)]="inputSideB" type="number" placeholder="Lado 2 do triângulo">
     <input [(ngModel)]="inputSideC" type="number" placeholder="Lado 3 do triângulo">
